samples/_failures_safe/1761353944_3930b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63a215de.c: In function ‘main’:
./samples/SAFE/__tmp_63a215de.c:149:20: error: missing terminating " character
  149 |             printf("%s [%s] %s
      |                    ^~~~~~~~~~~
./samples/SAFE/__tmp_63a215de.c:149:13: error: expected expression at end of input
  149 |             printf("%s [%s] %s
      |             ^~~~~~
./samples/SAFE/__tmp_63a215de.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_63a215de.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_63a215de.c:149:13: error: expected declaration or statement at end of input
